# MultiScreenSystem

./: CMakeLists.txt
config/: config.json  settings.json  streams.json
include/: Alerts.h  Application.h  FFLogRouter.h  FFmpegIncludes.h  Logger.h  Metrics.h  Settings.h  Stream.h  StreamManager.h  WebServer.h
include/utils/: narrow.hpp
libs/ffmpeg/include/libavutil/: ffversion.h
src/: Alerts.cpp  Application.cpp  FFLogRouter.cpp  Logger.cpp  Metrics.cpp  Settings.cpp  Stream.cpp  StreamManager.cpp  WebServer.cpp  main.cpp
www/: index.html
www/css/: styles.css
www/js/: main.js
